Need to work on getting the clicks to work correctly when you jump to the work section

--- a/scss/partials/_navigationBar.scss
+++ b/scss/partials/_navigationBar.scss
@@ -5,7 +5,7 @@
   left: 35px;
   right: 35px;
 
-  z-index: 1000;
+  z-index: 1005;
 
   color: $white;
 
@@ -93,15 +93,9 @@
       width: 25px;
       height: 16px;
       position: relative;
-      -webkit-transform: rotate(0deg);
-      -moz-transform: rotate(0deg);
-      -o-transform: rotate(0deg);
-      transform: rotate(0deg);
-      -webkit-transition: .5s ease-in-out;
-      -moz-transition: .5s ease-in-out;
-      -o-transition: .5s ease-in-out;
-      transition: .5s ease-in-out;
-      cursor: pointer;
+
+      @include transform(rotate(0deg));
+      @include transition(.45s ease-out);
 
       span {
         display: block;
@@ -111,14 +105,8 @@
         background: $white;
         opacity: 1;
         left: 0;
-        -webkit-transform: rotate(0deg);
-        -moz-transform: rotate(0deg);
-        -o-transform: rotate(0deg);
-        transform: rotate(0deg);
-        -webkit-transition: .45s ease-out;
-        -moz-transition: .45s ease-out;
-        -o-transition: .45s ease-out;
-        transition: .45s ease-out;
+        @include transform(rotate(0deg));
+        @include transition(.45s ease-out);
       }
 
 
@@ -134,6 +122,12 @@
         top: 14px;
       }
 
+      &.open {
+        position: fixed;
+        top: 26px;
+        right: 20px;
+      }
+
       &.open span:nth-child(1) {
         top: 0;
         left: 50%;
@@ -142,17 +136,11 @@
       }
 
       &.open span:nth-child(2) {
-        -webkit-transform: rotate(45deg);
-        -moz-transform: rotate(45deg);
-        -o-transform: rotate(45deg);
-        transform: rotate(45deg);
+        @include transform(rotate(45deg));
       }
 
       &.open span:nth-child(3) {
-        -webkit-transform: rotate(-45deg);
-        -moz-transform: rotate(-45deg);
-        -o-transform: rotate(-45deg);
-        transform: rotate(-45deg);
+        @include transform(rotate(-45deg));
       }
 
       &.open span:nth-child(4) {
@@ -162,4 +150,53 @@
         width: 0%;
       }
    }
+}
+
+#hamburger-menu {
+  visibility: hidden;
+  opacity: 0;
+
+  z-index: 1000;
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: $black;
+
+  @include transition(all .45s);
+
+  * {
+    display: none;
+  }
+}
+
+#hamburger-menu.open {
+  visibility: visible;
+  opacity: 0.75;
+
+  @include transition(all .45s);
+
+  * {
+    color: $white;
+    text-decoration: none;
+    display: block;
+  }
+
+  .hbm-navigation-items {
+    height: 100%;
+    padding: 70px 20px;
+
+    display: flex;
+    flex-flow: column;
+    align-items: center;
+  }
+
+  .hbm-navigation-item {
+    font-size: 16pt;
+
+    &:not(:first-child) {
+      margin-top: 15px;
+    }
+  }
 }
